[package]
name = "cargo-blinc"
version = "0.1.1"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Notifies about commands exit code using LED light blink(1)"
keywords = ["blink", "notify"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
repository = "https://github.com/devzbysiu/cargo-blinc"
homepage = "https://github.com/devzbysiu/cargo-blinc"
documentation = "https://docs.rs/cargo-blinc"
edition = "2021"
exclude = ["res/demo.gif"]

[dependencies]
transition = "0.1.1"
toml = "0.5"
serde = "1.0.104"
serde_derive = "1.0.104"
log = "0.4.8"
env_logger = "0.9.0"
anyhow = "1.0.26"
structopt = "0.3.15"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "2.0.0"
serial_test = "0.5.0"
