[package]
name = "cargo-blinc"
version = "0.1.1"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Notifies about commands exit code using LED light blink(1)"
keywords = ["blink", "notify"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
repository = "https://github.com/devzbysiu/cargo-blinc"
homepage = "https://github.com/devzbysiu/cargo-blinc"
documentation = "https://docs.rs/cargo-blinc"
edition = "2021"
exclude = ["res/demo.gif"]

[dependencies]
transition = "0.1.1"
toml = "0.8.0"
serde = "1.0.152"
serde_derive = "1.0.152"
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.68"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.3"
serial_test = "2.0.0"
